<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">WeLoudCloud</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="TAG_USERNUM">userNum</string>
    <string name="TAG_ID">ID</string>
    <string name="TAG_GROUPID">groupID</string>
    <string name="TAG_GROUPNAME">groupName</string>
    <string name="TAG_NICKNAME">nickName</string>
    <string name="TAG_EMAIL">email</string>
    <string name="TAG_ISMEMBER">isMember</string>
    <string name="TAG_ISADMISSION">isAdmission</string>
    <string name="TAG_RANKID">rankID</string>
    <string name="TAG_RANKNAME">rankName</string>
    <string name="TAG_GROUPUPLOAD">groupUpload</string>
    <string name="TAG_USERAPPROVED">userApproved</string>
    <string name="TAG_SERVERIP">serverIP</string>
    <string name="TAG_PERMISSION">permission</string>
    <string name="TAG_AUTOJOIN">autoJoin</string>
    <string name="TAG_MAKEPUBLIC">makePublic</string>
    <string name="TAG_DEFAULTFTPPATH">defaultFTPPath</string>
    <string name="TAG_WORKINGPATH">workingPath</string>
    <string name="TAG_ISCREATE">isCreate</string>
    <string name="TAG_ISKICK">isKick</string>
    <string name="TAG_JOINDATE">joinDate</string>
    <string name="TAG_ISINVITE">isInvite</string>
    <string name="TAG_MEMBERCOUNT">memberCount</string>

    <string name="TAG_JSON_LOGIN">login</string>
    <string name="TAG_JSON_SEARCH">groupsearch</string>
    <string name="TAG_JSON_SETT_GROUP_MAIN">settGroupMain</string>
    <string name="TAG_JSON_GROUPCREATE">groupcreate</string>
    <string name="TAG_JSON_GROUPRANK">grouprank</string>
    <string name="TAG_JSON_GROUPLIST">grouplist</string>
    <string name="TAG_JSON_SERVERLIST">serverlist</string>
    <string name="TAG_JSON_USERACCOUNT">useraccount</string>
    <string name="TAG_JSON_GROUPCLOUD">groupcloud</string>
    <string name="TAG_JSON_INVITATION">groupInvitation</string>
    <string name="TAG_JSON_SETT_GROUP_PER">settGroupPermission</string>
    <string name="TAG_JSON_SETT_GROUP_PER_DETAIL">settGroupPermissionDetail</string>
    <string name="TAG_JSON_GROUPUSERLIST">groupUserList</string>
    <string name="TAG_JSON_SETT_GROUP_ADMISSION">settGroupUserAdmission</string>

    <string name="FTP_ID">WeLoud</string>
    <string name="FTP_PASSWORD">WeL0udCl0ud</string>

    <string name="APP_VERSION">v 1.0</string>

    <string name="text_groupname">Group Name</string>
    <string name="text_autojoin">Auto Join</string>
    <string name="text_myaccount">My Account</string>
    <string name="text_programinfo">Program Version</string>
    <string name="text_id">ID</string>
    <string name="text_password">Password</string>
    <string name="text_currentPw">Current Password</string>
    <string name="text_newPw">New Password</string>
    <string name="text_confirmPw">Confirm Password</string>
    <string name="text_nickname">Nickname</string>
    <string name="text_email">Email</string>
    <string name="text_login">login</string>
    <string name="text_createaccount">Create Account</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_settings">Settings</string>
    <string name="text_accountinfo">Account Info</string>
    <string name="text_logout">Logout</string>
    <string name="text_ascName">Ascending (Name)</string>
    <string name="text_descName">Descending (Name)</string>
    <string name="text_ascDate">Ascending (Date)</string>
    <string name="text_descDate">Descending (Date)</string>
    <string name="text_loading">Loading</string>
    <string name="text_passwordchange">Change Password</string>
    <string name="text_notformatted">%1$s is not formatted.</string>
    <string name="text_isexists">is exists.</string>
    <string name="text_accountchanged">Account Data is Changed.</string>
    <string name="text_newpwsamecurrent">New Password is the same Current Password.</string>
    <string name="text_newpwnotmatch">Confirm Password is not match.</string>
    <string name="text_passworderr">Password is Error.</string>
    <string name="text_idpassworderr">ID or Password Error.</string>
    <string name="text_pwischange">Password is Change.</string>
    <string name="text_picture">"Picture"</string>
    <string name="text_music">"Music"</string>
    <string name="text_document">"Document"</string>
    <string name="text_video">"Video"</string>
    <string name="text_folder">"Folder"</string>
    <string name="text_groupsettings">"Group Settings"</string>
    <string name="text_backtogrouplist">"Back to GroupList"</string>
    <string name="text_dropoutsgroup">"Leave Group"</string>
    <string name="text_favoritegroup">"Favorite Group"</string>
    <string name="text_uploaddate">Upload Date</string>
    <string name="text_creategroup">Create Group</string>
    <string name="text_findgroup">Find all groups by name</string>
    <string name="text_createfolder">Create Folder</string>
    <string name="text_uploadFile">Upload File</string>
    <string name="text_inputfoldername">Input Folder Name</string>
    <string name="text_nameisempty"> name is Empty.</string>
    <string name="text_downloadsuccess">Download success</string>
    <string name="text_downloadfail">Download fail</string>
    <string name="text_fileisntexists">File is not exists.</string>
    <string name="text_nameisexists">File name is exists.</string>
    <string name="text_delete">Delete</string>
    <string name="text_overwrite">Overwrite</string>
    <string name="text_rename">Rename</string>
    <string name="text_fileisexists">The file already exists.</string>
    <string name="text_filenameisexists">The file name is exists.</string>
    <string name="text_file">File</string>
    <string name="text_chooseyouraction">Choose your action.</string>
    <string name="text_selectitem_one">%1$d item</string>
    <string name="text_selectitem_multi">%1$d items</string>
    <string name="text_areyousuredelete_one">Are you sure want to delete %1$s?</string>
    <string name="text_areyousuredelete_multi">Are you sure want to delete selected %1$d items?</string>
    <string name="text_download">Download</string>
    <string name="text_open">Open</string>
    <string name="text_kickuser">Kick User</string>
    <string name="text_permissionsett">Rank Permission Settings</string>
    <string name="text_userranksett">User Rank Settings</string>
    <string name="text_userinvite">User Invite</string>
    <string name="text_useradmission">User Admission</string>
    <string name="text_downloadcomplete">Download Complete</string>
    <string name="text_downloadinprogress">Download in progress</string>
    <string name="text_movefailed">Failed to move File %1$s.</string>
    <string name="text_searchfileandfolder">Search Files and Folders (more than 2 characters)</string>
    <string name="text_path">Path : %1$s</string>
    <string name="text_successrename">Success to change name.</string>
    <string name="text_morechar">Please enter more than %1$d characters</string>
    <string name="text_groupnameexists">%1$s Group is already exists.</string>
    <string name="text_ranknameexsists">%1$s rank name is already exists.</string>
    <string name="text_youalreadyjoined">You have already joined this group</string>
    <string name="text_successcreategroup">Successfully created group.</string>
    <string name="text_lastmodifed">Last Modifed</string>
    <string name="text_currentFolder_Upload">Upload File to Current Folder</string>
    <string name="text_uploadsuccess">Upload Success</string>
    <string name="text_uploadfail">Upload Fail</string>
    <string name="text_uploadcomplete">Upload Complete</string>
    <string name="text_uploadinprogress">Upload in progress</string>
    <string name="text_allowsearchtogroup">Allow search to group</string>
    <string name="text_generalmember">General Member</string>
    <string name="text_specialmember">Special Member</string>
    <string name="text_administrator">Group Administrator</string>
    <string name="text_creator">Creator</string>
    <string name="text_successregister">Registered Successfully.</string>
    <string name="text_hello">Welcome, %1$s.</string>
    <string name="text_groupsearch">Group Search</string>
    <string name="text_noresults">Sorry, no results were found</string>
    <string name="text_entergroupname">Please enter group name.</string>
    <string name="text_waitsignup">Wait for apply to sign up.</string>
    <string name="text_cancelsignup">Cancel for apply to sign up.</string>
    <string name="text_signupgroup">You have been sign up for this group.</string>
    <string name="text_rankdelete">Rank Delete</string>
    <string name="text_rankname">Rank Name</string>
    <string name="text_createrank">Create Rank</string>
    <string name="text_successcreaterank">Successfully Created Rank.</string>
    <string name="text_successchangedrank">Successfully Changed Rank.</string>
    <string name="text_successdeleterank">Successfully Deleted Rank.</string>
    <string name="text_enteruserid">Please enter user id.</string>
    <string name="text_joindate">Joined</string>
    <string name="text_areyousurekick_one">Are you sure want to kick %1$s?</string>
    <string name="text_areyousurekick_multi">Are you sure want to kick selected %1$d user?</string>
    <string name="text_successkickuser">Successfully Kick User.</string>
    <string name="text_useralreadyjoined">%1$s is already joined this group</string>
    <string name="text_invitationsend">Your invitation has been sent.</string>
    <string name="text_invitationcancel">Your invitation has been canceled.</string>
    <string name="text_successadmission">Successfully Admission to user.</string>
    <string name="text_deletegroup">Delete Group</string>
    <string name="text_afterinheritance">leave after Inheritance</string>
    <string name="text_creatorinheritance">Creator Inheritance</string>
    <string name="text_areyousureleave">Are you sure you want to leave this group?</string>
    <string name="text_areyousuredeletegroup">Are you sure you want to delete this group?</string>
    <string name="text_areyousureinheritance">Are you sure you want to inheritance to the %1$s? (You go back to the default member)</string>
    <string name="text_invitation">Group Invitation</string>

    <string name="per_fileupload">File Upload</string>
    <string name="per_filerename">File Rename</string>
    <string name="per_filemove">File Move</string>
    <string name="per_filedelete">File Delete</string>
    <string name="per_folderadd">Folder Add</string>
    <string name="per_foldermodify">Folder Modify</string>
    <string name="per_folderdelete">Folder Delete</string>
    <string name="per_approvejoin">Approve Join</string>
    <string name="per_invite">User Invite</string>
    <string name="per_managegroup">Manage Group</string>

    <string name="error_temporary">Temporary Error.</string>
    <string name="error_connection">Conntection Error.</string>

    <string name="hint_groupname">Group Name (2 ~ 16)</string>
    <string name="hint_id">ID (4 ~ 16)</string>
    <string name="hint_password">Password (4 ~ 24)</string>
    <string name="hint_nickname">Nickname (2 ~ 12)</string>
    <string name="hint_rankname">Rankname (2 ~ 12)</string>
    <string name="hint_email">Email Address</string>

</resources>
