<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/groupList_search"
        android:icon="@drawable/search"
        android:title="Search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/groupList_cancle"
        android:icon="@drawable/cancle"
        android:title="Cancle"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/groupList_sortNameAsc"
        android:title="@string/text_ascName"
        app:showAsAction="never"/>

    <item
        android:id="@+id/groupList_sortNameDesc"
        android:title="@string/text_descName"
        app:showAsAction="never"/>

    <item
        android:id="@+id/groupList_sortModAsc"
        android:title="@string/text_ascDate"
        app:showAsAction="never"/>

    <item
        android:id="@+id/groupList_sortModDesc"
        android:title="@string/text_descDate"
        app:showAsAction="never"/>
</menu>
