<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userAccount_ctMain"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0eff5"
    android:divider="@drawable/separator"
    android:showDividers="middle"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#fff"
        android:divider="@drawable/separator"
        android:showDividers="middle">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_id"
                android:textColor="#000"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/userAccount_tvId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18dp"
                android:text="null"
                android:gravity="right"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/userAccount_btnChangePw"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_passwordchange"
                android:textColor="#000"
                android:textSize="18dp"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/backbtn"
                android:tint="#aaffffff"
                android:rotation="180" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/text_nickname"
                android:textColor="#000"
                android:textSize="18dp"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/userAccount_etNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:hint="@string/hint_nickname"
                android:textSize="18dp"
                android:maxLength="186"
                android:gravity="right"
                android:inputType="textNoSuggestions" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/text_email"
                android:textColor="#000"
                android:textSize="18dp"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/userAccount_etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:hint="@string/hint_email"
                android:textSize="18dp"
                android:maxLength="186"
                android:gravity="right"
                android:inputType="textNoSuggestions" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/userAccount_tvErrorMsg"
            android:paddingTop="20dp"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#f00"/>
    </LinearLayout>

</LinearLayout>