<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3763b1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WELOUD LOGO"
            android:textColor="#ffffff"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="15dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editId"
            android:hint="@string/text_id"
            android:background="#ffffff"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:inputType="textNoSuggestions"
            android:maxLines="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editPassword"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:background="#ffffff"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:padding="5dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#254479"
            android:textColor="#ffffff"
            android:text="@string/text_login"
            android:textSize="18dp"
            android:layout_margin="5dp"
            android:id="@+id/btnLogin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textinfo"
                android:text=""
                android:textColor="#ff0000"
                style="@style/borderWhiteInRed"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:layout_margin="15dp">

            <Button
                android:id="@+id/btnNewMember"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:background="#254479"
                android:text="@string/text_createaccount"
                android:textColor="#ffffff"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>